# RType-Pirate

./: CMakeLists.txt  README.md  compile.sh  conanfile.txt  error  rfc_protocol.txt
Client/: ClientGame.cpp  ClientGameNetwork.cpp  Levels.cpp  Start.cpp  introMainMenu.cpp  main.cpp  preGameWaitRoom.cpp
Client/Components/: ComponentTypeList.cpp  Factory.cpp  Factory.hpp  NetworkStruct.hpp
Client/Systems/Audio/: SoundLib.cpp  systemSound.cpp
Client/Systems/Graphical/: GraphicalLib.cpp  systemDestroy.cpp  systemDraw.cpp  systemEvent.cpp  systemPlayerActions.cpp  systemSpawn.cpp
Client/Systems/Headers/: systemDestroy.hpp  systemDraw.hpp  systemEvent.hpp  systemMove.hpp  systemPlayerActions.hpp  systemScore.hpp  systemSound.hpp  systemSpawn.hpp  systemSpeed.hpp
Client/Systems/Sources/: systemMove.cpp  systemShoot.cpp  systemSpeed.cpp
Client/include/: Animation.hpp  ClientGame.hpp  ClientGameNetwork.hpp  GraphicalLib.hpp  IAnimation.hpp  IGraphicalLib.hpp  ISoundLib.hpp  IntroMainMenu.hpp  Levels.hpp  SoundLib.hpp  Start.hpp  preGameWaitRoom.hpp
Server/Components/: Component.hpp  ComponentTypeList.hpp  NetworkStruct.hpp
Server/Mobs/: IMob.hpp
Server/Mobs/Bydos/: MobBydos.cpp  MobBydos.hpp
Server/System/: systemApplyDmg.cpp  systemApplyDmg.hpp  systemBounceMove.cpp  systemBounceMove.hpp  systemHitbox.cpp  systemHitbox.hpp  systemHorizalMove.cpp  systemHorizalMove.hpp  systemRandomShoot.cpp  systemRandomShoot.hpp  systemSpawn.cpp  systemSpawn.hpp
Server/include/: Client.hpp  ClientGame.hpp  ClientRoom.hpp  Game.hpp  IXserver.hpp  NetworkBuffer.hpp  Room.hpp  Server.hpp  Session.hpp  Socket.hpp  Start.hpp  Thread.hpp
Server/src/: Client.cpp  ClientGame.cpp  ClientRoom.cpp  Game.cpp  Room.cpp  Server.cpp  Session.cpp  Socket.cpp  Start.cpp  Thread.cpp  main.cpp
